--- a/tau-zad1/pom.xml
+++ b/tau-zad1/pom.xml
@@ -14,6 +14,11 @@
       <version>4.12</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>2.7.19</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
